@@ -1,5 +1,6 @@
 package com.example.ragknowledgeservice.service.parsing;
 
+import com.example.ragknowledgeservice.entities.DocumentMetadata;
 import com.example.ragknowledgeservice.exception.DocumentParsingException;
 import com.example.ragknowledgeservice.service.DocumentService;
 import org.apache.pdfbox.pdmodel.PDDocument;
@@ -22,7 +23,7 @@ import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-public class PdfDocumentParserImplTest {
+class PdfDocumentParserImplTest {
 
     @Mock
     private DocumentService documentService;
@@ -35,27 +36,36 @@ public class PdfDocumentParserImplTest {
             "Second page text"
         );
 
+        DocumentMetadata metadata = createDocumentMetadata(documentId, "sample.pdf");
+
         when(documentService.downloadDocument(documentId)).thenReturn(pdf);
+        when(documentService.getDocumentMetadata(documentId)).thenReturn(metadata);
 
         DocumentParser parser = new PdfDocumentParserImpl(documentService);
-
         List<DocumentPage> pages = parser.parse(documentId);
 
         assertThat(pages).hasSize(2);
 
         assertThat(pages.getFirst().documentId()).isEqualTo(documentId);
-        assertThat(pages.get(0).pageNumber()).isEqualTo(1);
-        assertThat(pages.get(0).text()).contains("First page text");
+        assertThat(pages.getFirst().pageNumber()).isEqualTo(1);
+        assertThat(pages.getFirst().text()).contains("First page text");
+        assertThat(pages.get(0).sourceFilename()).isEqualTo("sample.pdf");
+        assertThat(pages.get(0).extractionOrder()).isEqualTo(1);
 
         assertThat(pages.get(1).documentId()).isEqualTo(documentId);
         assertThat(pages.get(1).pageNumber()).isEqualTo(2);
         assertThat(pages.get(1).text()).contains("Second page text");
+        assertThat(pages.get(1).sourceFilename()).isEqualTo("sample.pdf");
+        assertThat(pages.get(1).extractionOrder()).isEqualTo(2);
     }
 
     @Test
     void throwsDocumentParsingExceptionWhenPdfIsInvalid() {
         UUID documentId = UUID.randomUUID();
-        when(documentService.downloadDocument(documentId)).thenReturn("not a pdf".getBytes());
+        DocumentMetadata metadata = createDocumentMetadata(documentId, "invalid.pdf");
+
+        when(documentService.downloadDocument(documentId)).thenReturn("not a pdf".getBytes(StandardCharsets.UTF_8));
+        when(documentService.getDocumentMetadata(documentId)).thenReturn(metadata);
 
         DocumentParser parser = new PdfDocumentParserImpl(documentService);
 
@@ -69,14 +79,21 @@ public class PdfDocumentParserImplTest {
         UUID documentId = UUID.randomUUID();
         byte[] pdf = createPdfWithEmptyPage();
 
+        DocumentMetadata metadata = createDocumentMetadata(documentId, "empty-page.pdf");
+
         when(documentService.downloadDocument(documentId)).thenReturn(pdf);
+        when(documentService.getDocumentMetadata(documentId)).thenReturn(metadata);
 
         DocumentParser parser = new PdfDocumentParserImpl(documentService);
 
         List<DocumentPage> pages = parser.parse(documentId);
+
         assertThat(pages).hasSize(1);
+        assertThat(pages.getFirst().documentId()).isEqualTo(documentId);
         assertThat(pages.getFirst().pageNumber()).isEqualTo(1);
         assertThat(pages.getFirst().text()).isNotNull();
+        assertThat(pages.getFirst().sourceFilename()).isEqualTo("empty-page.pdf");
+        assertThat(pages.getFirst().extractionOrder()).isEqualTo(1);
     }
 
     @Test
@@ -84,13 +101,16 @@ public class PdfDocumentParserImplTest {
         UUID documentId = UUID.randomUUID();
         byte[] pdf = createPdf("Test page");
 
+        DocumentMetadata metadata = createDocumentMetadata(documentId, "sample.pdf");
+
         when(documentService.downloadDocument(documentId)).thenReturn(pdf);
+        when(documentService.getDocumentMetadata(documentId)).thenReturn(metadata);
 
         DocumentParser parser = new PdfDocumentParserImpl(documentService);
-
         parser.parse(documentId);
 
         verify(documentService).downloadDocument(documentId);
+        verify(documentService).getDocumentMetadata(documentId);
         verifyNoMoreInteractions(documentService);
     }
 
@@ -98,8 +118,13 @@ public class PdfDocumentParserImplTest {
     void wrapsPdfBoxFailureInDocumentParsingException() {
         UUID documentId = UUID.randomUUID();
 
-        when(documentService.downloadDocument(documentId))
-            .thenReturn("invalid-pdf".getBytes(StandardCharsets.UTF_8));
+        DocumentMetadata metadata = createDocumentMetadata(
+            documentId,
+            "invalid-pdf.pdf"
+        );
+
+        when(documentService.downloadDocument(documentId)).thenReturn("invalid-pdf".getBytes(StandardCharsets.UTF_8));
+        when(documentService.getDocumentMetadata(documentId)).thenReturn(metadata);
 
         DocumentParser parser = new PdfDocumentParserImpl(documentService);
 
@@ -107,6 +132,13 @@ public class PdfDocumentParserImplTest {
             .isInstanceOf(DocumentParsingException.class)
             .hasMessage("Failed to parse document: " + documentId)
             .hasCauseInstanceOf(Exception.class);
+    }
+
+    private DocumentMetadata createDocumentMetadata(UUID documentId, String filename) {
+        return DocumentMetadata.builder()
+            .documentId(documentId)
+            .title(filename)
+            .build();
     }
 
     private byte[] createPdfWithEmptyPage() throws Exception {
